# arion-dp-2

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh
benchmark/: Arion-DP_100G_Benchmark.md  Arion-DP_Benchmark.md
cn/: bootstrap.sh  readme.md
cn/cn_dpnd/: Makefile  cn_dpnd.h  cn_dpnd_usr.c  cn_dpnd_xdp.c
deploy/: arion_deploy.sh  deploy_common.sh  full_deploy.sh
deploy/install/: build_arion_images.sh  deploy_arion_manager.sh  deploy_arion_operator.sh  (+4 more)
docs/: getting_started.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  trn_cli.c  trn_cli.h  trn_cli_common.c
src/cli/test/: test_cli.c
src/dmn/: CMakeLists.txt  trn_rpc_protocol_handlers_1.c  trn_transit_xdp_usr.c  trn_transit_xdp_usr.h  trn_transitd.c  trn_transitd.h
src/dmn/test/: test_dmn.c
src/include/: trn_datamodel.h
src/mgmt/: CMakeLists.txt
src/mgmt/common/: common.py  constants.py  rpc.py  store.py  wf_factory.py
src/mgmt/manager/: entrypoint.sh  manage.py  setup.py
src/mgmt/manager/project/: __init__.py  config.py
src/mgmt/manager/project/api/: default_setup.py  models.py  nodes.py  ports.py  settings.py  vpcs.py  zgcs.py
src/mgmt/operator/: setup.py
src/mgmt/operator/proto/def/: droplet.proto
src/mgmt/operator/workflows/: arion_wf_factory.py
src/mgmt/tests/: test_arion_aca_ping.py
src/mgmt/tests/common/: aca_helper.py  arion_api.py  node.py
src/rpcgen/: rpcgen.cmake  trn_rpc_protocol.x
src/xdp/: CMakeLists.txt  trn_kern.h  trn_transit_xdp.c  trn_transit_xdp_maps.h
test/: CMakeLists.txt  run.py
tools/: bootstrap.sh
(+34 files in other folders)
